[package]
name = "misskey_api_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
misskey = { git = "https://github.com/poppingmoon/misskey-rs", branch="feature/13.13.2", features = ["13-13-2"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3.28"
url = "2.1.1"
regex = "1.7.0"